Update cover image and fix grid spacing

--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -7,7 +7,7 @@
     size: 15pt;
     letter-spacing: 3.75px;
     margin-top: 2em;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
     width: 83%;
     margin-left: auto;
     margin-right: auto;
