--- a/src/portfolio/Work.css
+++ b/src/portfolio/Work.css
@@ -51,6 +51,7 @@
 
 .grid .image {
     place-self: center;
+    height: 36.5vh;
     overflow: hidden;
 }
 
